2000-08-09  Katsumi Yamaoka <yamaoka@jpl.org>

	* lisp/nntp.el (nntp-open-telnet): Wait for the telnet prompt
	before sending a command; allow the rtelnet prompt as well.

	* lisp/message.el (message-make-forward-subject): Remove garbage
	line.

2000-08-01  Katsumi Yamaoka <yamaoka@jpl.org>

	* configure: Regenerate.
	* aclocal.m4 (AC_CHECK_EMACS): Unset `EMACS' environment variable
	if it is `t'.

2000-07-24  Katsumi Yamaoka <yamaoka@jpl.org>

	* lisp/gnus-vers.el (gnus-revision-number): Increment to 03.

	* configure: Regenerate with autoconf v2.14.1.

	* configure.in: Rewrite for using new macros in aclocal.m4.

	* aclocal.m4: (AC_ADD_LOAD_PATH, AC_PATH_PACKAGEDIR,
	AC_CHECK_EMACS, AC_DEFINE_GNUS_PRODUCT_NAME): New macros.
	(AC_PATH_LISPDIR): Set `lispdir' to ".../site-lisp/t-gnus" by
	default.
	(AM_PATH_LISPDIR): Remove.

	* acinclude.m4: Remove.

	* lisp/dgnushack.el: Don't add "/usr/share/emacs/site-lisp" to
	`load-path'.

2000-07-21   Daiki Ueno  <ueno@unixuser.org>

	* lisp/gnus-bbdb.el (gnus-bbdb/update-record): Use
	mime-entity-fetch-field instead of mail-header-from.

2000-07-18   Daiki Ueno  <ueno@unixuser.org>

	* lisp/gnus-vers.el (gnus-revision-number): Increment to 02.

	* lisp/gnus-bbdb.el (gnus-bbdb/update-record): Don't refer
	gnus-original-article-buffer.
	(gnus-bbdb-insinuate): Set gnus-article-display-hook instead of
	gnus-article-prepare-hook.
	(gnus-bbdb/extract-field-value): Use mime-entity-fetch-field
	instead of mail-fetch-field.
	(gnus-bbdb/extract-field-value-init): Just return extractor.

2000-07-15   Daiki Ueno  <ueno@unixuser.org>

	* lisp/gnus-vers.el (gnus-revision-number): Increment to 01.

	* README-gnus-bbdb.{ja|en}: Add example setting about
	gnus-bbdb-insinuate-message.
	(bbdb-auto-notes-hook): Don't use pop.

	* lisp/gnus-bbdb.el: Check defvaralias when compiling.

	* lisp/gnus-art.el (gnus-article-setup-buffer): Set
	gnus-original-article-buffer as unibyte.
	(gnus-request-article-this-buffer): Ditto.
