@@ -1,3 +1,8 @@
+2000-08-18  TSUCHIYA Masatoshi  <tsuchiya@pine.kuee.kyoto-u.ac.jp>
+            Akihiro Arisawa  <ari@atesoft.advantest.co.jp>
+
+	* nnshimbun.el: Add `mew' and `xemacs' support.
+
 2000-08-09  Katsumi Yamaoka <yamaoka@jpl.org>
 
 	* lisp/nntp.el (nntp-open-telnet): Wait for the telnet prompt
